<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registrationPageLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration_page">

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="283dp"
        android:layout_height="62dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_email_id"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/registerPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.807" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="277dp"
        android:layout_height="72dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="185dp"
        android:layout_height="59dp"
        android:layout_marginBottom="304dp"
        android:text="@string/register1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>