<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/namePageLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".name_page">

    <EditText
        android:id="@+id/name"
        android:layout_width="262dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.779" />

    <EditText
        android:id="@+id/age"
        android:layout_width="257dp"
        android:layout_height="52dp"
        android:layout_marginBottom="416dp"
        android:ems="10"
        android:hint="@string/enter_age"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="134dp"
        android:layout_height="52dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age"
        app:layout_constraintVertical_bias="0.112" />
</androidx.constraintlayout.widget.ConstraintLayout>